--- a/one-project/index.html
+++ b/one-project/index.html
@@ -25,6 +25,20 @@
       <h2>About</h2>
       <p>Small example project demonstrating a responsive layout and minimal JavaScript.</p>
     </section>
+
+        <section class="card">
+      <h2>Interactive To-Do</h2>
+      <form id="todo-form">
+        <input id="todo-input" placeholder="Add a task..." required autocomplete="off">
+        <button type="submit">Add</button>
+      </form>
+      <ul id="todo-list"></ul>
+    </section>
+
+    <section class="card">
+      <h2>About</h2>
+      <p>Small example project demonstrating a responsive layout and minimal JavaScript.</p>
+    </section>
   </main>
 
   <script src="script.js"></script>
