--- a/one-project/index.html
+++ b/one-project/index.html
@@ -22,7 +22,8 @@
     </section>
 
     <section class="card">
-      <h2>About</h2>
+      <h2>About us</h2>
+      <p>Small example project demonstrating a responsive layout and minimal JavaScript.</p>
       <p>Small example project demonstrating a responsive layout and minimal JavaScript.</p>
     </section>
 
