--- a/one-project/index.html
+++ b/one-project/index.html
@@ -22,9 +22,10 @@
     </section>
 
     <section class="card">
-      <h2>About us</h2>
+      <h2>About</h2>
       <p>Small example project demonstrating a responsive layout and minimal JavaScript.</p>
-      <p>Small example project demonstrating a responsive layout and minimal JavaScript.</p>
+      <p>Small example project demonstrating a responsive layout and minimal JavaScript.</p><p>Small example project demonstrating a responsive layout and minimal JavaScript.</p><p>Small example project demonstrating a responsive layout and minimal JavaScript.</p><p>Small example project demonstrating a responsive layout and minimal JavaScript.</p><p>Small example project demonstrating a responsive layout and minimal JavaScript.</p>
+      
     </section>
 
         <section class="card">
