--- a/one-project/index.html
+++ b/one-project/index.html
@@ -24,7 +24,7 @@
     <section class="card">
       <h2>About</h2>
       <p>Small example project demonstrating a responsive layout and minimal JavaScript.</p>
-      <p>Small example project demonstrating a responsive layout and minimal JavaScript.</p><p>Small example project demonstrating a responsive layout and minimal JavaScript.</p><p>Small example project demonstrating a responsive layout and minimal JavaScript.</p><p>Small example project demonstrating a responsive layout and minimal JavaScript.</p><p>Small example project demonstrating a responsive layout and minimal JavaScript.</p>
+      <p>Small example project demonstrating a responsive layout and minimal JavaScript.</p>
       
     </section>
 
